fix gaps

--- a/packages/wp-plugin/ionos-essentials/ionos-essentials/inc/dashboard/dashboard.css
+++ b/packages/wp-plugin/ionos-essentials/ionos-essentials/inc/dashboard/dashboard.css
@@ -386,7 +386,7 @@ main.ionos-maintenance-mode .ionos-maintenance-only{
     display: flex;
     flex-direction: row;
 
-    gap: 10px;
+    gap: 60px;
 }
 
 .ionos-site-health-overview__info-item{
